<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateSmallObject" >

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/NameTextView"
        android:layout_alignBottom="@+id/NameTextView"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/NameTextView"
        android:ems="10"
        android:singleLine="true"
        android:hint="@string/smallNameTextViewHint" />

    <TextView
        android:id="@+id/NameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:text="@string/textViewName" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NameTextView"
        android:layout_below="@+id/nameEditText"
        android:layout_marginTop="17dp"
        android:text="@string/textViewDescription" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/locationTextView"
        android:layout_alignBottom="@+id/locationTextView"
        android:layout_toRightOf="@+id/locationTextView"
        android:ems="10"
        android:singleLine="true"
        android:hint="@string/smallDescriptionTextViewHint" />

    <Button
        android:id="@+id/photoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/photoButton"
        android:onClick="photoButton" />

    <Button
        android:id="@+id/addButtonLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="okayClick"
        android:text="@string/Add" />

    <ImageView
        android:id="@+id/photoView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/addButtonLarge"
        android:layout_alignLeft="@+id/locationTextView"
        android:layout_below="@+id/photoButton"
        android:layout_marginTop="24dp"
        android:scaleType="fitCenter"
        android:src="@drawable/waitforcamera" />

</RelativeLayout>
