<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateLargeObject" >

    <Button
        android:id="@+id/addButtonLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="addClick"
        android:text="@string/Add" />

    <EditText
        android:id="@+id/largeNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/largeNameTextView"
        android:layout_alignBottom="@+id/largeNameTextView"
        android:layout_toRightOf="@+id/largeNameTextView"
        android:singleLine="true"
        android:ems="10"
        android:hint="@string/nameHintLargeTextView" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/largeNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/textViewName" />

    <TextView
        android:id="@+id/GPSStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/largeNameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/waitForLocation"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/viewImageButtonLargeObject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GPSStatus"
        android:layout_centerHorizontal="true"
        android:text="@string/photoButton" 
        android:onClick="photoButton"/>

    <ImageView
        android:id="@+id/photoView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/viewImageButtonLargeObject"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:scaleType="fitCenter"
        android:src="@drawable/waitforcamera" />

</RelativeLayout>
